tests/compile-fail/compile_fail__func_param_named_after_reg.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unexpected token `REG`
   ┌─ <input>:25:22
   │
25 │         void foo(int REG[100]) {}
   │                      ^^^ unexpected token
   │
   = 
     Expected one of ";", "anim", "ecli", "entry", "mapfile", "script", "timeline" or IDENT


